--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
+//@ts-ignore
 {
   "compilerOptions": {
+    
     "target": "esnext",
     "module": "commonjs",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".", 
+    
     "paths": {
       "@/*": ["resources/js/*"]
     },
