feat: User profile & Page settings

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "autoprefixer": "^10.4.17",
     "axios": "^0.26.1",
     "laravel-vite-plugin": "^0.7.8",
-    "postcss": "^8.4.33",
-    "postcss-preset-mantine": "^1.12.3",
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.4.1",
@@ -31,26 +31,27 @@
     "@inertiajs/core": "^1.0.14",
     "@inertiajs/inertia": "^0.11.1",
     "@inertiajs/react": "^1.0.14",
-    "@mantine/carousel": "^7.5.0",
-    "@mantine/charts": "^7.5.0",
-    "@mantine/code-highlight": "^7.5.0",
-    "@mantine/core": "^7.5.1",
-    "@mantine/dates": "^7.5.0",
-    "@mantine/dropzone": "^7.5.0",
-    "@mantine/form": "^7.5.0",
-    "@mantine/hooks": "^7.5.0",
-    "@mantine/modals": "^7.5.0",
-    "@mantine/notifications": "^7.5.0",
-    "@mantine/nprogress": "^7.5.0",
-    "@mantine/spotlight": "^7.5.0",
-    "@mantine/tiptap": "^7.5.0",
-    "@tabler/icons-react": "^2.46.0",
-    "@tiptap/extension-link": "^2.2.0",
-    "@tiptap/react": "^2.2.0",
-    "@tiptap/starter-kit": "^2.2.0",
+    "@mantine/carousel": "^7.5.2",
+    "@mantine/charts": "^7.5.2",
+    "@mantine/code-highlight": "^7.5.2",
+    "@mantine/core": "^7.5.2",
+    "@mantine/dates": "^7.5.2",
+    "@mantine/dropzone": "^7.5.2",
+    "@mantine/form": "^7.5.2",
+    "@mantine/hooks": "^7.5.2",
+    "@mantine/modals": "^7.5.2",
+    "@mantine/notifications": "^7.5.2",
+    "@mantine/nprogress": "^7.5.2",
+    "@mantine/spotlight": "^7.5.2",
+    "@mantine/tiptap": "^7.5.2",
+    "@tabler/icons-react": "^2.47.0",
+    "@tiptap/extension-link": "^2.2.2",
+    "@tiptap/react": "^2.2.2",
+    "@tiptap/starter-kit": "^2.2.2",
     "classnames": "^2.5.1",
+    "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
-    "embla-carousel-react": "^8.0.0-rc21",
+    "embla-carousel-react": "^8.0.0-rc22",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
