--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.24",
+        "midtrans/midtrans-php": "^2.5",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
