--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,21 +51,17 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
-    phpmyadmin:
-        image: 'phpmyadmin/phpmyadmin'
-        ports:
-            - '${FORWARD_DB_PORT:-3303}:3303'
+    ngrok:
+        image: 'ngrok/ngrok:alpine'
         environment:
-            PMA_HOST: mysql
-            PMA_PORT: 3303
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ROOT_HOST: '%'
-            MYSQL_DATABASE: '${DB_DATABASE}'
-            MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 1
+            NGROK_AUTHTOKEN: '${NGROK_AUTHTOKEN}'
+        command: 'http --domain=${NGROK_STATICDOMAIN} laravel.test:80'
+        ports:
+            - '4040:4040'
         networks:
             - sail
+        depends_on:
+            - laravel.test
     redis:
         image: 'redis:alpine'
         ports:
