--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "@tiptap/react": "^2.2.2",
     "@tiptap/starter-kit": "^2.2.2",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0-rc22",
     "lodash": "^4.17.21",
+    "mantine-react-table": "^2.0.0-alpha.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "2",
