Added donation dashboard list. Integrate mantine-react-table package

--- a/package.json
+++ b/package.json
@@ -27,27 +27,28 @@
   },
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@emotion/react": "^11.11.3",
     "@headlessui/react": "^1.7.18",
     "@inertiajs/core": "^1.0.14",
     "@inertiajs/inertia": "^0.11.1",
     "@inertiajs/react": "^1.0.14",
-    "@mantine/carousel": "^7.5.2",
-    "@mantine/charts": "^7.5.2",
-    "@mantine/code-highlight": "^7.5.2",
-    "@mantine/core": "^7.5.2",
-    "@mantine/dates": "^7.5.2",
-    "@mantine/dropzone": "^7.5.2",
-    "@mantine/form": "^7.5.2",
-    "@mantine/hooks": "^7.5.2",
-    "@mantine/modals": "^7.5.2",
-    "@mantine/notifications": "^7.5.2",
-    "@mantine/nprogress": "^7.5.2",
-    "@mantine/spotlight": "^7.5.2",
-    "@mantine/tiptap": "^7.5.2",
+    "@mantine/carousel": "^7.5.3",
+    "@mantine/charts": "^7.5.3",
+    "@mantine/code-highlight": "^7.5.3",
+    "@mantine/core": "^7.5.3",
+    "@mantine/dates": "^7.5.3",
+    "@mantine/dropzone": "^7.5.3",
+    "@mantine/form": "^7.5.3",
+    "@mantine/hooks": "^7.5.3",
+    "@mantine/modals": "^7.5.3",
+    "@mantine/notifications": "^7.5.3",
+    "@mantine/nprogress": "^7.5.3",
+    "@mantine/spotlight": "^7.5.3",
+    "@mantine/tiptap": "^7.5.3",
     "@tabler/icons-react": "^2.47.0",
-    "@tiptap/extension-link": "^2.2.2",
-    "@tiptap/react": "^2.2.2",
-    "@tiptap/starter-kit": "^2.2.2",
+    "@tiptap/extension-link": "^2.2.3",
+    "@tiptap/react": "^2.2.3",
+    "@tiptap/starter-kit": "^2.2.3",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
