--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "mantine-react-table": "^2.0.0-alpha.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "recharts": "2",
     "ziggy-js": "^1.8.1"
   },
